--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@acpr/rate-limit-postgresql": "^1.4.1",
     "@prisma/client": "^5.21.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
