--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts "
+    "dev": "nodemon index.ts ",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +25,12 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
+    "@vitest/coverage-v8": "^2.1.4",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   }
 }
