--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./**/*.ts"],
+  "include": ["./**/*.ts", "intergrationsTests/databaseConnection/db-setup.js"],
   "exclude": ["node_modules"]
 }
