feat(auth): enhance signin and refreshToken functions with IP address handling and logging; add Sentry integration for error tracking

--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "cafe-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "dev": "nodemon index.ts --host",
+    "build": "tsc  && npm run sentry:sourcemaps",
+    "start": "node dist/index.js",
     "test": " npm-run-all test:unit test:integration",
     "test:unit": "vitest run --passWithNoTests tests/* | tee logs/unit-test.log",
     "test:integration": "npm-run-all --continue-on-error db:start db:setup test:integration:run db:stop",
     "test:integration:run": "vitest run --passWithNoTests intergrationsTests/databaseConnection | tee logs/integration-test.log",
     "db:start": "docker-compose up -d test_db > logs/db-start.log 2>&1",
     "db:setup": "cross-env NODE_ENV=test node intergrationsTests/databaseConnection/db-setup.js > logs/db-setup.log 2>&1",
-    "db:stop": "docker-compose down > logs/db-stop.log 2>&1"
+    "db:stop": "docker-compose down > logs/db-stop.log 2>&1",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org none-fmn --project backend ./dist && sentry-cli sourcemaps upload --org none-fmn --project backend ./dist"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +24,9 @@
     "@acpr/rate-limit-postgresql": "^1.4.1",
     "@faker-js/faker": "^9.3.0",
     "@prisma/client": "^6.0.1",
+    "@sentry/cli": "^2.39.1",
+    "@sentry/node": "^8.43.0",
+    "@sentry/profiling-node": "^8.43.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
