--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,15 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "inlineSources": true,
+
+    // Set `sourceRoot` to  "/" to strip the build path prefix
+    // from generated source code references.
+    // This improves issue grouping in Sentry.
+    "sourceRoot": "/"
   },
-  "include": ["./**/*.ts", "intergrationsTests/databaseConnection/db-setup.js"],
+  "include": ["./**/*.ts", "intergrationsTests/databaseConnection/db-setup.js", "instrument.ts"],
   "exclude": ["node_modules"]
 }
